Issue #687 style: Fix alignment issue in font-size-dropdown in text plugin

--- a/org.ekstep.text-1.1/editor/style/plugin.css
+++ b/org.ekstep.text-1.1/editor/style/plugin.css
@@ -82,7 +82,7 @@
 
 .text-formatting-options .font-size-dropdown {
     min-width: 0!important;
-    width: 3em!important;
+    width: 4em!important;
 }
 
 .text-formatting-options .ui.dropdown.font-size-dropdown .menu {
